finally fixed keybord issue on mobile chat

--- a/src/components/ChatBox/ChatBox.css
+++ b/src/components/ChatBox/ChatBox.css
@@ -112,4 +112,7 @@
         overflow: scroll;
         min-height: 88vh;
     }
+    .container{
+        margin-bottom: 70px !important;
+    }
 }
