--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -33,8 +33,9 @@
 .Right-side-chat {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+ 
 }
+
 .conversation:hover {
   background: #80808038;
   cursor: pointer;
@@ -99,10 +100,12 @@
 }
 @media screen and (max-width:760px){
   .Chat {
-   
-    display: flex;
+    grid-template-rows: auto 70px;
+    grid-template-columns: auto;
+    /* display: flex;
     flex-direction: column;
-    min-height: 100%;
+    min-height: 100%; */
+    max-height: 88vh;
   }
    .follower.conversation>div>.name{
     display: block;
